--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -1,35 +1,34 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
-{% for object in object_list %}
-  <div class="card w-75 my-3">
-    <div class="card-header">
-      <h5><a href="{{ object.url }}">{{ object.title }}</a></h5>
-    </div>
-    <div class="card-body">
-      <h5 class="card-title"><p>{{ object.company }}</p></h5>
-      <p class="card-text">{{ object.description }}</p>
-      <p>{{ object.city.name }} | {{ object.language.name }} | <small>{{ object.timestamp|date:"d-m-Y" }}</small></p>
-      <a href="{{ object.url }}" class="btn btn-primary">{{ object.salary }}</a>
-    </div>
-  </div>
-{% empty %}
-  <h3>К сожалению по вашему запросу ничего не найдено.</h3>
-{% endfor %}
-
-<div class="rov">
-  <div class="col-md-6 ">
-    <form method="GET" action="">
-      <div class="form-group row">
-        <div class="col-auto">
-          {{ form.as_p }}
+<div class="jumbotron">
+  <h1 class="display-5">Привет, это сервис по сбору и рассылки вакансий</h1>
+  <p class="lead">Это простой пример блока с компонентом в стиле jumbotron для привлечения дополнительного внимания к содержанию или информации.</p>
+  <hr class="my-4">
+  <h5 class="my-3">Для просмотра доступных вакансий заполните форму</h5>
+  <form method="GET" class="form-inline my-0 mr-sm-2" action="{% url 'vacancy_list' %}">
+          {{ form.as_table }}
     <button type="submit" class="btn btn-primary">Найти</button>
-        </div>
-      </div>
     </form>
-  </div>
+
 </div>
+
+<!--<div class="row">-->
+<!--  <div class="col"><h4>Сервис по сбору и рассылки вакансий</h4> <br></div>-->
+<!--</div>-->
+<!--<div class="row">-->
+<!--  <div class="col-md-6 mx-auto">-->
+<!--    <h5>Для просмотра доступных вакансий заполните форму</h5>-->
+<!--    <form method="GET" class="form-inline my-1 mr-sm-2" action="{% url 'list' %}">-->
+<!--&lt;!&ndash;      <div class="form-row align-items-center">&ndash;&gt;-->
+<!--&lt;!&ndash;        <div class="col-auto">&ndash;&gt;-->
+<!--          {{ form.as_table }}-->
+<!--    <button type="submit" class="btn btn-primary">Найти</button>-->
+<!--&lt;!&ndash;        </div>&ndash;&gt;-->
+<!--&lt;!&ndash;      </div>&ndash;&gt;-->
+<!--    </form>-->
+<!--  </div>-->
+<!--</div>-->
 
 
 
