--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,14 +13,14 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <!--      <div class="container-fluid">-->
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="{% url 'home' %}">Job Vacancy</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
@@ -32,6 +32,10 @@
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
         </li>
       </ul>
+<!--          <form class="form-inline my-1 my-sm-0" method="GET"  action="{% url 'list' %}">-->
+<!--              {{ form.as_table }}-->
+<!--          <button type="submit" class="btn btn-outline-success btn-sm align-middle">Найти</button>-->
+<!--          </form>-->
     </div>
 <!--        </div>-->
     </nav>
