--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -19,12 +19,28 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Features</a>
         </li>
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:update' %}">Настройки</a>
+            </li>
+        {% else %}
+         <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+        </li>
+         <li class="nav-item">
+          <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
+        </li>
+        {% endif %}
+
         <li class="nav-item">
           <a class="nav-link" href="#">Pricing</a>
         </li>
