--- a/src/scraping/templates/scraping/home.html
+++ b/src/scraping/templates/scraping/home.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="jumbotron">
   <h1 class="display-5">Привет, это сервис по сбору и рассылки вакансий</h1>
-  <p class="lead">Это простой пример блока с компонентом в стиле jumbotron для привлечения дополнительного внимания к содержанию или информации.</p>
+  <p class="lead">Этот сервис позволит вам узнавать о новых вакансиях в Вашем городе, так же Вы сможете подписаться на рассылку новых вакансий по интересующим параметам.</p>
   <hr class="my-4">
   <h5 class="my-3">Для просмотра доступных вакансий заполните форму</h5>
   <form method="GET" class="form-inline my-0 mr-sm-2" action="{% url 'vacancy_list' %}">
