--- a/src/scraping/templates/scraping/vacancy_list.html
+++ b/src/scraping/templates/scraping/vacancy_list.html
@@ -2,26 +2,29 @@
 
 {% block content %}
 <div class="row">
-<div class="col">
-</div>
-<div class="col-9">
-
-{% for object in object_list %}
-  <div class="card my-3">
-    <div class="card-header">
-      <h5><a href="{{ object.url }}">{{ object.title }}</a></h5>
+<!--<div class="col">-->
+<!--</div>-->
+  <div class="col-md-7 mx-auto">
+  {% if object_list %}
+    <h3 class="my-4 text-center"> Доступные вакансии по Вашему запросу.</h3>
+  {% endif %}
+  {% for object in object_list %}
+    <div class="card my-3">
+      <div class="card-header">
+        <h5><a href="{{ object.url }}">{{ object.title }}</a></h5>
+      </div>
+      <div class="card-body">
+        <h5 class="card-title"><p>{{ object.company }}</p></h5>
+        <p class="card-text">{{ object.description }}</p>
+        <p>{{ object.city.name }} | {{ object.language.name }} | <small>{{ object.timestamp|date:"d-m-Y" }}</small></p>
+        <a href="{{ object.url }}" class="btn btn-primary">{{ object.salary }}</a>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title"><p>{{ object.company }}</p></h5>
-      <p class="card-text">{{ object.description }}</p>
-      <p>{{ object.city.name }} | {{ object.language.name }} | <small>{{ object.timestamp|date:"d-m-Y" }}</small></p>
-      <a href="{{ object.url }}" class="btn btn-primary">{{ object.salary }}</a>
-    </div>
+  {% empty %}
+    <h3>К сожалению по вашему запросу ничего не найдено.</h3>
+  {% endfor %}
   </div>
-{% empty %}
-  <h3>К сожалению по вашему запросу ничего не найдено.</h3>
-{% endfor %}
-</div>
+
 <!--<div class="row">-->
   <div class="col-md-2 ">
     <form method="GET" action="{% url 'vacancy_list' %}">
@@ -36,39 +39,41 @@
 <!--</div>-->
 {% if object_list %}
 
+  <div class="col-md-6 mx-auto">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item">
+          {% if page_obj.has_previous %}
+        <a class="page-link"
+           href="?city={{ city }}&language={{ language }}&page={{ page_obj.previous_page_number }}"
+           aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+          {% endif %}
+      </li>
+       {% for page in page_obj.paginator %}
+      <li class="page-item {% if page.number == page_obj.number %} active {% endif %}">
+          <a class="page-link" href="?city={{ city }}&language={{ language }}&page={{ page.number }}">
+              {{ page.number }}
+          </a></li>
+       {% endfor %}
+      <li class="page-item">
+           {% if page_obj.has_next %}
+        <a class="page-link"
+           href="?city={{ city }}&language={{ language }}&page={{ page_obj.next_page_number }}"
+           aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+          {% endif %}
+      </li>
+    </ul>
+  </nav>
+  </div>
+</div>
 
-<nav aria-label="Page navigation">
-  <ul class="pagination">
-    <li class="page-item">
-        {% if page_obj.has_previous %}
-      <a class="page-link"
-         href="?city={{ city }}&language={{ language }}&page={{ page_obj.previous_page_number }}"
-         aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-      </a>
-        {% endif %}
-    </li>
-     {% for page in page_obj.paginator %}
-    <li class="page-item {% if page.number == page_obj.number %} active {% endif %}">
-        <a class="page-link" href="?city={{ city }}&language={{ language }}&page={{ page.number }}">
-            {{ page.number }}
-        </a></li>
-     {% endfor %}
-    <li class="page-item">
-         {% if page_obj.has_next %}
-      <a class="page-link"
-         href="?city={{ city }}&language={{ language }}&page={{ page_obj.next_page_number }}"
-         aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-      </a>
-        {% endif %}
-    </li>
-  </ul>
-</nav>
 
-
-<div class="row">
-  <div class="col">
+<!--<div class="row">-->
+<!--  <div class="col">-->
 
 <!--<div class="pagination">-->
 <!--    <span class="step-links">-->
