--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,62 +1,87 @@
+{% load static %}
+{% url 'accounts:update' as update_url %}
+{% url 'accounts:register' as register_url %}
+{% url 'accounts:login' as login_url %}
+{% url 'home' as home_url %}
 <!doctype html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <link rel="icon" href="{% static 'favico.ico' %}">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <title>Вакансии</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #555;">
 <!--      <div class="container-fluid">-->
-    <a class="navbar-brand" href="{% url 'home' %}">Job Vacancy</a>
+    <a class="navbar-brand" href="{% url 'home' %}" id="brand" >Job Search</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
+          <a class="nav-link {% if request.path == home_url %} active {% endif %}" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
         </li>
         {% if user.is_authenticated %}
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:update' %}">Настройки</a>
+                <a class="nav-link {% if request.path == update_url %} active {% endif %}" href="{% url 'accounts:update' %}">Настройки</a>
             </li>
         {% else %}
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+          <a class="nav-link {% if request.path == login_url %} active {% endif %}" href="{% url 'accounts:login' %}">Войти</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="{% url 'accounts:register' %}">Регистрация</a>
+          <a class="nav-link {% if request.path == register_url %} active {% endif %}" href="{% url 'accounts:register' %}">Регистрация</a>
         </li>
         {% endif %}
 
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-<!--          <form class="form-inline my-1 my-sm-0" method="GET"  action="{% url 'list' %}">-->
-<!--              {{ form.as_table }}-->
-<!--          <button type="submit" class="btn btn-outline-success btn-sm align-middle">Найти</button>-->
-<!--          </form>-->
     </div>
 <!--        </div>-->
     </nav>
 
-
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                {% if messages %}
+                    {% for message in messages %}
+                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <strong>Important:</strong> {{ message }}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
+                {% if message.tags %}
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <strong>Info:</strong> {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                {% endif %}
+                    <ul class="messages">
+<!--                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>-->
+<!--                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}-->
+<!--                                {{ message }}-->
+<!--                            </li>-->
+                    </ul>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
 
   <div class="container">
   {% block content %}
