--- a/templates/base.html
+++ b/templates/base.html
@@ -19,35 +19,35 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #555;">
-<!--      <div class="container-fluid">-->
-    <a class="navbar-brand" href="{% url 'home' %}" id="brand" >Job Search</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link {% if request.path == home_url %} active {% endif %}" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
-        </li>
-        {% if user.is_authenticated %}
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}" id="brand" >Job Search</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+              <a class="nav-link {% if request.path == home_url %} active {% endif %}" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link {% if request.path == update_url %} active {% endif %}" href="{% url 'accounts:update' %}">Настройки</a>
+            {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if request.path == update_url %} active {% endif %}" href="{% url 'accounts:update' %}">Настройки</a>
+                </li>
+            {% else %}
+             <li class="nav-item">
+              <a class="nav-link {% if request.path == login_url %} active {% endif %}" href="{% url 'accounts:login' %}">Войти</a>
             </li>
-        {% else %}
-         <li class="nav-item">
-          <a class="nav-link {% if request.path == login_url %} active {% endif %}" href="{% url 'accounts:login' %}">Войти</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link {% if request.path == register_url %} active {% endif %}" href="{% url 'accounts:register' %}">Регистрация</a>
-        </li>
-        {% endif %}
+             <li class="nav-item">
+              <a class="nav-link {% if request.path == register_url %} active {% endif %}" href="{% url 'accounts:register' %}">Регистрация</a>
+            </li>
+            {% endif %}
 
-      </ul>
-    </div>
-<!--        </div>-->
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <div class="container">
@@ -55,28 +55,28 @@
             <div class="col">
                 {% if messages %}
                     {% for message in messages %}
-                    {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <strong>Important:</strong> {{ message }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endif %}
-                {% if message.tags %}
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong>Info:</strong> {{ message }}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                {% endif %}
-                    <ul class="messages">
-<!--                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>-->
-<!--                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}-->
-<!--                                {{ message }}-->
-<!--                            </li>-->
-                    </ul>
+                        {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                <strong>Important:</strong> {{ message }}
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        {% endif %}
+                        {% if message.tags %}
+                            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                <strong>Info:</strong> {{ message }}
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                        {% endif %}
+                        <ul class="messages">
+    <!--                            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>-->
+    <!--                                {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Important: {% endif %}-->
+    <!--                                {{ message }}-->
+    <!--                            </li>-->
+                        </ul>
                     {% endfor %}
                 {% endif %}
             </div>
@@ -89,9 +89,6 @@
   {% endblock %}
   </div>
 
-
-
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
@@ -103,7 +100,6 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
+
   </body>
 </html>
-
-
