--- a/accounts/templates/accounts/update.html
+++ b/accounts/templates/accounts/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title%} Login {% endblock %}
+{% block title%} Настройка {% endblock %}
 
 
 {% block content %}
