--- a/scraping/templates/scraping/vacancy_list.html
+++ b/scraping/templates/scraping/vacancy_list.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title%} Вакансии {% endblock %}
+
 {% block content %}
 <div class="row">
   <div class="col-md-7 mx-auto">
