--- a/scraping/templates/scraping/home.html
+++ b/scraping/templates/scraping/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 <div class="jumbotron">
   <h1 class="display-5">Привет, это сервис по сбору и рассылки вакансий</h1>
@@ -29,6 +29,32 @@
 <!--    </form>-->
 <!--  </div>-->
 <!--</div>-->
+
+
+
+     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>
+
+   <!-- Make sure you put this AFTER Leaflet's CSS -->
+ <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
+
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+<div class="container">
+<div class="row">
+    <div class="col" style="width: 300px; height:600px;" id="map"><p></p></div>
+    {{ my_dictionary | json_script:"my_dictionary" }}
+    <script src="{% static 'js/scripts.js' %}"></script>
+    </div>
+    </div>
+
+
+
 
 
 
