--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,3 +6,12 @@
     font-family: Ledger;
     color: #FFF;
 }
+
+#map {
+height: 100%;
+width: 400px;
+top: 15%;
+bottom: 10px;
+left: 10%;
+right: 5%;
+}
