--- a/templates/js.html
+++ b/templates/js.html
@@ -12,16 +12,11 @@
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 <div class="row">
-    <div class="col-md-9" id="map"><p>vdsvsdvsfddsgdfgfdsfgdrfgdfgdfgdfgdfgdfgdfgfdgdfgdfgdfgdfg</p></div>
+    <div class="col-md-9" id="map"><p>
+        vdsvsdvsfddsgdfgfdsfgdrfgdfgdfgdfgdfgdfgdfgfdgdfgdfgdfgdfg
+    </p></div>
     <script src="{% static 'js/scripts.js' %}"></script>
     </div>
 
 
 
-#map {
-height: 400px;
-top: 15%;
-bottom: 10px;
-left: 10%;
-right: 5%;
-}
