--- a/templates/base.html
+++ b/templates/base.html
@@ -81,10 +81,12 @@
         </div>
     </div>
 
-  <div class="container">
-  {% block content %}
+  <div class="container" >
+      <div class="row">
+          {% block content %}
 
-  {% endblock %}
+          {% endblock %}
+      </div>
   </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
